This this the changelog file for the Pothos C++ library.

Release 0.2.0 (pending)
==========================

- Threading overhaul and performance improvements
- Topology factory from JSON description
- Topology supports pass-through flows

Release 0.1.1 (pending)
==========================

- Fixed Topology::waitInactive() false positive condition
- Fixed usage of managed buffers for message back-pressure

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos C++ library.