@@ -75,7 +75,6 @@ void Pothos::WorkerActor::subscribeInput(const std::string &action, const std::s
         if (not found) throw PortAccessError("Pothos::WorkerActor::unsubscribePort()",
             Poco::format("input %s subscription missing from output port %s", inputPort->name(), myPortName));
         subscribers.erase(it);
-        this->autoDeletePorts();
     }
 
     this->updatePorts();
@@ -101,7 +100,6 @@ void Pothos::WorkerActor::subscribeOutput(const std::string &action, const std::
         if (not found) throw PortAccessError("Pothos::WorkerActor::unsubscribePort()",
             Poco::format("output %s subscription missing from input port %s", outputPort->name(), myPortName));
         subscribers.erase(it);
-        this->autoDeletePorts();
     }
 
     this->updatePorts();
@@ -430,5 +428,7 @@ static auto managedWorkerActor = Pothos::ManagedClass()
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::WorkerActor, setOutputBufferManager))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::WorkerActor, autoAllocateInput))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::WorkerActor, autoAllocateOutput))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::WorkerActor, autoDeleteInput))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::WorkerActor, autoDeleteOutput))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::WorkerActor, queryActivityIndicator))
     .commit("Pothos/WorkerActor");
